--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // DataBinding
+    implementation 'com.google.android.material:material:1.0.0-beta01'
     kapt "com.android.databinding:compiler:$gradle_version"
-    
+
     // Support
     def support_version = '27.1.1'
     implementation "com.android.support:support-v4:$support_version"
@@ -98,7 +99,6 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
-    
     // Picasso
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
