--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,13 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField 'String', 'API_BASE_URL', '"https://api.github.com/"'
+            buildConfigField 'String', 'DB_NAME', '"appDb"'
+        }
+
+        debug {
+            buildConfigField 'String', 'API_BASE_URL', '"https://api.github.com/"'
+            buildConfigField 'String', 'DB_NAME', '"appDb"'
         }
     }
 }
