--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,37 +54,26 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
     kapt "com.android.databinding:compiler:$gradle_version"
 
-    // Support
-    def support_version = '27.1.1'
-    implementation "com.android.support:support-v4:$support_version"
-    implementation "com.android.support:appcompat-v7:$support_version"
-    implementation "com.android.support:recyclerview-v7:$support_version"
-    implementation "com.android.support:cardview-v7:$support_version"
-    implementation "com.android.support:animated-vector-drawable:$support_version"
-    implementation "com.android.support:customtabs:$support_version"
-    implementation "com.android.support:design:$support_version"
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-
     implementation 'com.jakewharton.timber:timber:4.7.0'
 
     // Architecture components
-    def arch_version = '1.1.1'
-    implementation "android.arch.lifecycle:runtime:$arch_version"
-    implementation "android.arch.lifecycle:extensions:$arch_version"
-    implementation "android.arch.lifecycle:reactivestreams:$arch_version"
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha02'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
-    kapt "android.arch.lifecycle:compiler:$arch_version"
+    def arch_version = '2.1.0-alpha02'
+    implementation "androidx.lifecycle:lifecycle-runtime:$arch_version"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    implementation "androidx.lifecycle:lifecycle-extensions:$arch_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$arch_version"
+    kapt "androidx.lifecycle:lifecycle-compiler:$arch_version"
 
     // Room
-    def room_version = "1.1.1"
-    implementation "android.arch.persistence.room:runtime:$room_version"
-    kapt "android.arch.persistence.room:compiler:$room_version"
+    def room_version = "2.1.0-alpha04"
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-coroutines:$room_version"
 
     // Paging
-    def paging_version = "1.0.1"
-    implementation "android.arch.paging:runtime:$paging_version"
+    def paging_version = "2.1.0"
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+
 
     // Retrofit
     def retrofit_version = '2.2.0'
