--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.0'
 
     // Architecture components
-    def arch_version = '2.1.0-alpha02'
+    def arch_version = '2.1.0-alpha03'
     implementation "androidx.lifecycle:lifecycle-runtime:$arch_version"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$arch_version"
@@ -65,10 +65,10 @@ dependencies {
     kapt "androidx.lifecycle:lifecycle-compiler:$arch_version"
 
     // Room
-    def room_version = "2.1.0-alpha04"
+    def room_version = "2.1.0-alpha06"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-coroutines:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
     // Paging
     def paging_version = "2.1.0"
