--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,14 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            buildConfigField 'String', 'API_BASE_URL', '"https://api.github.com/"'
+            buildConfigField 'String', 'API_BASE_URL', '"https://test.com"'
+            buildConfigField 'String', 'API_GIT_URL', '"https://api.github.com/"'
             buildConfigField 'String', 'DB_NAME', '"appDb"'
         }
 
         debug {
-            buildConfigField 'String', 'API_BASE_URL', '"https://api.github.com/"'
+            buildConfigField 'String', 'API_BASE_URL', '"https://test.com"'
+            buildConfigField 'String', 'API_GIT_URL', '"https://api.github.com/"'
             buildConfigField 'String', 'DB_NAME', '"appDb"'
         }
     }
