--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,8 +52,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // DataBinding
-    implementation 'com.google.android.material:material:1.0.0-beta01'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0-beta01'
+    implementation 'com.google.android.material:material:1.1.0-alpha04'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha03'
     kapt "com.android.databinding:compiler:$gradle_version"
 
     implementation 'com.jakewharton.timber:timber:4.7.0'
@@ -75,6 +75,10 @@ dependencies {
     // Paging
     def paging_version = "2.1.0"
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+
+    // WorkManager
+    def work_version = "2.0.0"
+    implementation "androidx.work:work-runtime-ktx:$work_version"
 
     // Retrofit
     def retrofit_version = '2.2.0'
@@ -102,6 +106,6 @@ dependencies {
     implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    androidTestImplementation 'androidx.test:runner:1.1.2-alpha02'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02'
 }
