--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,12 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1"
     api "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
+    // Koin
+    def koin_version = '2.0.0-rc-2'
+    implementation "org.koin:koin-android:$koin_version"
+    implementation "org.koin:koin-androidx-scope:$koin_version"
+    implementation "org.koin:koin-android-viewmodel:$koin_version"
+
     // AndroidX
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.1'
@@ -92,14 +98,6 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$ok_http_version"
 
     kapt 'com.google.guava:guava:24.1-jre' // add above dagger-compiler
-
-    // Dagger
-    def dagger_version = '2.21'
-    implementation "com.google.dagger:dagger:$dagger_version"
-    implementation "com.google.dagger:dagger-android:$dagger_version"
-    implementation "com.google.dagger:dagger-android-support:$dagger_version"
-    kapt "com.google.dagger:dagger-compiler:$dagger_version"
-    kapt "com.google.dagger:dagger-android-processor:$dagger_version"
 
     // Picasso
     implementation 'com.squareup.picasso:picasso:2.5.2'
