--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,16 +56,18 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
+
+    // Material
+    implementation 'com.google.android.material:material:1.1.0-alpha05'
 
     // DataBinding
-    implementation 'com.google.android.material:material:1.1.0-alpha04'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha03'
     kapt "com.android.databinding:compiler:$gradle_version"
 
     implementation 'com.jakewharton.timber:timber:4.7.0'
 
     // Architecture components
-    def arch_version = '2.1.0-alpha03'
+    def arch_version = '2.1.0-alpha04'
     implementation "androidx.lifecycle:lifecycle-runtime:$arch_version"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$arch_version"
