--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     ext.kotlin_version = '1.3.21'
     ext.gradle_version = '3.3.2'
+    ext.navigation_safe_args_version = '2.1.0-alpha02'
 
     repositories {
         google()
@@ -11,6 +12,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigation_safe_args_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
