--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,6 +115,9 @@ dependencies {
     // Location
     implementation 'com.google.android.gms:play-services-location:16.0.0'
 
+    //Google Maps
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.2-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02'
