--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,13 @@ android {
         enabled = true
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     packagingOptions {
         exclude 'META-INF/atomicfu.kotlin_module'
-        exclude 'META-INF/xxx'
     }
 
     buildTypes {
@@ -49,7 +53,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.0"
     api "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
@@ -60,7 +64,7 @@ dependencies {
     implementation "org.koin:koin-android-viewmodel:$koin_version"
 
     // AndroidX
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
     implementation 'androidx.core:core-ktx:1.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
@@ -69,7 +73,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha05'
 
     // DataBinding
-    kapt "com.android.databinding:compiler:$gradle_version"
+    kapt 'com.android.databinding:compiler:3.2.0-alpha10'
 
     // Architecture components
     def arch_version = '2.1.0-alpha04'
@@ -81,8 +85,8 @@ dependencies {
 
     // Navigation
     def nav_version = "2.1.0-alpha02"
-    implementation "androidx.navigation:navigation-fragment:$nav_version" // For Kotlin use navigation-fragment-ktx
-    implementation "androidx.navigation:navigation-ui:$nav_version" // For Kotlin use navigation-ui-ktx
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // Room
     def room_version = "2.1.0-alpha06"
@@ -101,12 +105,11 @@ dependencies {
     // Retrofit
     def retrofit_version = '2.5.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
     // Ok http
-    def ok_http_version = '3.12.1'
+    def ok_http_version = '3.14.0'
     implementation "com.squareup.okhttp3:logging-interceptor:$ok_http_version"
 
     implementation 'com.jakewharton.timber:timber:4.7.1'
