--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'kotlin-kapt'
 
 apply plugin: 'kotlin-android-extensions'
 
-apply plugin: "androidx.navigation.safeargs.kotlin" // for kotlin safeargs only. For java & kotlin use "androidx.navigation.safeargs"
+apply plugin: 'androidx.navigation.safeargs.kotlin' // for kotlin safeargs only. For java & kotlin use "androidx.navigation.safeargs"
 
 android {
     compileSdkVersion 28
@@ -120,7 +120,7 @@ dependencies {
     // Location
     implementation 'com.google.android.gms:play-services-location:16.0.0'
 
-    //Google Maps
+    // Google Maps
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
 
     testImplementation 'junit:junit:4.12'
