--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
+    implementation 'androidx.fragment:fragment:1.1.0-alpha06'
 
     // Material
     implementation 'com.google.android.material:material:1.1.0-alpha05'
@@ -129,6 +130,8 @@ dependencies {
     def junit_version = '1.2.0-alpha04'
     androidTestImplementation "androidx.test:runner:$junit_version"
     androidTestImplementation "androidx.test:rules:$junit_version"
+    implementation "androidx.test:monitor:$junit_version"
+    implementation "androidx.test:monitor:1.1.1"
 
     // Assertions
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
@@ -138,4 +141,7 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso_version"
     androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:$espresso_version"
+
+
+    debugImplementation 'androidx.fragment:fragment-testing:1.1.0-alpha06'
 }
