--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
-    implementation 'androidx.fragment:fragment:1.1.0-alpha06'
+    implementation 'androidx.fragment:fragment:1.1.0-alpha07'
 
     // Material
     implementation 'com.google.android.material:material:1.1.0-alpha05'
@@ -90,7 +90,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // Room
-    def room_version = "2.1.0-alpha06"
+    def room_version = "2.1.0-alpha07"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
@@ -124,10 +124,18 @@ dependencies {
     // Google Maps
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
 
+    // Arch Chart
+    implementation 'com.github.imaNNeoFighT:ArcChartView:1.0.3.1'
+
+//    // Layout hide
+//    implementation 'com.github.christophesmet:android_maskable_layout:v1.2.0'
+
+    //testing
+
     testImplementation 'junit:junit:4.12'
 
     // AndroidJUnitRunner and JUnit Rules
-    def junit_version = '1.2.0-alpha04'
+    def junit_version = '1.2.0-alpha05'
     androidTestImplementation "androidx.test:runner:$junit_version"
     androidTestImplementation "androidx.test:rules:$junit_version"
     implementation "androidx.test:monitor:$junit_version"
@@ -143,5 +151,5 @@ dependencies {
     androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:$espresso_version"
 
 
-    debugImplementation 'androidx.fragment:fragment-testing:1.1.0-alpha06'
+    debugImplementation 'androidx.fragment:fragment-testing:1.1.0-alpha07'
 }
