--- a/app/build.gradle
+++ b/app/build.gradle
@@ -127,8 +127,10 @@ dependencies {
     // Arch Chart
     implementation 'com.github.imaNNeoFighT:ArcChartView:1.0.3.1'
 
-//    // Layout hide
-//    implementation 'com.github.christophesmet:android_maskable_layout:v1.2.0'
+    // Layout hide
+    implementation('com.github.christophesmet:android_maskable_layout:v1.3.1') {
+        exclude group: 'com.intellij', module: 'annotations'
+    }
 
     //testing
 
