--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,20 +64,20 @@ dependencies {
     implementation "org.koin:koin-android-viewmodel:$koin_version"
 
     // AndroidX
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
-    implementation 'androidx.core:core-ktx:1.0.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha5'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha04'
-    implementation 'androidx.fragment:fragment:1.1.0-alpha07'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha05'
+    implementation 'androidx.fragment:fragment:1.1.0-alpha08'
 
     // Material
-    implementation 'com.google.android.material:material:1.1.0-alpha05'
+    implementation 'com.google.android.material:material:1.1.0-alpha06'
 
     // DataBinding
     kapt 'com.android.databinding:compiler:3.2.0-alpha10'
 
     // Architecture components
-    def arch_version = '2.1.0-alpha04'
+    def arch_version = '2.2.0-alpha01'
     implementation "androidx.lifecycle:lifecycle-runtime:$arch_version"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$arch_version"
@@ -85,12 +85,12 @@ dependencies {
     kapt "androidx.lifecycle:lifecycle-compiler:$arch_version"
 
     // Navigation
-    def nav_version = "2.1.0-alpha02"
+    def nav_version = "2.1.0-alpha03"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // Room
-    def room_version = "2.1.0-alpha07"
+    def room_version = "2.1.0-beta01"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
@@ -130,6 +130,7 @@ dependencies {
     // Layout hide
     implementation('com.github.christophesmet:android_maskable_layout:v1.3.1') {
         exclude group: 'com.intellij', module: 'annotations'
+        exclude group: 'com.android.support', module: 'appcompat-v7'
     }
 
     //testing
@@ -137,7 +138,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 
     // AndroidJUnitRunner and JUnit Rules
-    def junit_version = '1.2.0-alpha05'
+    def junit_version = '1.2.0-beta01'
     androidTestImplementation "androidx.test:runner:$junit_version"
     androidTestImplementation "androidx.test:rules:$junit_version"
     implementation "androidx.test:monitor:$junit_version"
@@ -153,5 +154,5 @@ dependencies {
     androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:$espresso_version"
 
 
-    debugImplementation 'androidx.fragment:fragment-testing:1.1.0-alpha07'
+    debugImplementation 'androidx.fragment:fragment-testing:1.1.0-alpha08'
 }
