--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha05'
     implementation 'androidx.fragment:fragment:1.1.0-alpha08'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha04'
 
     // Material
     implementation 'com.google.android.material:material:1.1.0-alpha06'
