--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0-alpha06'
 
     // DataBinding
+    implementation 'com.android.support:support-v4:28.0.0'
     kapt 'com.android.databinding:compiler:3.2.0-alpha10'
 
     // Architecture components
