--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,23 +69,23 @@ dependencies {
     implementation "org.koin:koin-android-viewmodel:$koin_version"
 
     // AndroidX
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.core:core-ktx:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha05'
-    implementation 'androidx.fragment:fragment:1.1.0-alpha09'
-    implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha04'
-    implementation 'com.google.android.material:material:1.1.0-alpha06'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0- beta01'
+    implementation 'androidx.fragment:fragment:1.2.0-alpha01'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0-alpha06'
+    implementation 'com.google.android.material:material:1.1.0-alpha08'
 
     // Material
-    implementation 'com.google.android.material:material:1.1.0-alpha06'
+    implementation 'com.google.android.material:material:1.1.0-alpha08'
 
     // DataBinding
     implementation 'com.android.support:support-v4:28.0.0'
     kapt 'com.android.databinding:compiler:3.2.0-alpha10'
 
     // Architecture components
-    def arch_version = '2.2.0-alpha01'
+    def arch_version = '2.2.0-alpha02'
     implementation "androidx.lifecycle:lifecycle-runtime:$arch_version"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$arch_version"
@@ -93,12 +93,12 @@ dependencies {
     kapt "androidx.lifecycle:lifecycle-compiler:$arch_version"
 
     // Navigation
-    def nav_version = "2.1.0-alpha04"
+    def nav_version = "2.1.0-alpha06"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // Room
-    def room_version = "2.1.0-beta01"
+    def room_version = "2.2.0-alpha01"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
@@ -108,7 +108,7 @@ dependencies {
     implementation "androidx.paging:paging-runtime-ktx:$paging_version"
 
     // WorkManager
-    def work_version = "2.0.1"
+    def work_version = "2.1.0"
     implementation "androidx.work:work-runtime-ktx:$work_version"
 
     // Retrofit
@@ -127,10 +127,10 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     // Location
-    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     // Google Maps
-    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 
     // Arch Chart
     implementation 'com.github.imaNNeoFighT:ArcChartView:1.0.3.1'
@@ -146,14 +146,13 @@ dependencies {
     testImplementation 'junit:junit:4.12'
 
     // AndroidJUnitRunner and JUnit Rules
-    def junit_version = '1.2.0-beta01'
+    def junit_version = '1.2.0'
     androidTestImplementation "androidx.test:runner:$junit_version"
     androidTestImplementation "androidx.test:rules:$junit_version"
     implementation "androidx.test:monitor:$junit_version"
-    implementation "androidx.test:monitor:1.1.1"
 
     // Assertions
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
 
     // Espresso dependencies
     def espresso_version = '3.2.0-alpha04'
@@ -162,5 +161,5 @@ dependencies {
     androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:$espresso_version"
 
 
-    debugImplementation 'androidx.fragment:fragment-testing:1.1.0-alpha09'
+    debugImplementation 'androidx.fragment:fragment-testing:1.2.0-alpha01'
 }
